--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <header class="container-fluid header">
     <div class="container">
       <div class="row">
-        <div class="col-xl-1 col-lg-1 col-md-4 col-4" data-aos="fade-up">
+        <div class="col-xl-2 col-lg-2 col-md-4 col-4" data-aos="fade-up">
           <div class="header__logo">
             <a href="#"> tvi </a>
           </div>
@@ -54,16 +54,8 @@
             </ul>
           </nav>
         </div>
-        <div class="col-xl-3 col-lg-3 col-md-8 col-8 d-flex align-items-center justify-content-end">
+        <div class="col-xl-2 col-lg-2 col-md-8 col-8 d-flex align-items-center justify-content-end">
           <div class="header__controls">
-            <div class="header__social d-md-flex d-none">
-              <a class="header__social_item" href="#" data-aos="fade-up">
-                <img src="img/icons/whatsapp.png" alt="">
-              </a>
-              <a class="header__social_item" href="#" data-aos="fade-up">
-                <img src="img/icons/telegram.svg" alt="">
-              </a>
-            </div>
             <div class="header__burger" data-aos="fade-up">
               <button class="js-menu-open">
                 <div class="hamburger_menu">
@@ -107,13 +99,13 @@
         <div class="first-layout__title" data-aos="fade-up" data-aos-delay="250">
           <h1>Контент-стратегия для компании <br> “Галерея Юридических Услуг”</h1>
         </div>
-        <video onloadeddata="this.play();" class="first-layout__video" autoplay muted loop>
+        <video onloadeddata="this.play();" data-aos="fade-up" data-aos-delay="350" class="first-layout__video" autoplay muted loop>
           <source src="img/video/header-1.mp4" type="video/mp4"> Your browser does not support HTML5 video. </video>
       </div>
     </section>
     <!-- About Service -->
     <section class="container-fluid about-service">
-      <div class="container about-service__spacing">
+      <div class="container block-spacing">
         <div class="row">
           <div class="col-xl-11 col-lg-11 col-10 d-flex flex-column justify-content-center">
             <p data-aos="fade-up">Галерея юридических услуг - это современная полносервисная компания, которая может предоставить практически весь спектр юридических услуг в одном месте как для граждан, так и для бизнеса. </p>
@@ -142,7 +134,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid about-service__spacing about-service__gallery">
+      <div class="container-fluid block-spacing about-service__gallery">
         <div class="row">
           <div class="col-xl-4 col-md-6 col-sm-6 col-12 mb-3 mb-md-5" data-aos="fade-up">
             <div class="about-service__gallery_item">
@@ -161,7 +153,7 @@
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing">
+      <div class="container block-spacing">
         <h2 class="about-service__title-icon mb-4 mb-lg-5" data-aos="fade-up">
           <span class="i-legal-hammer icon"></span>
           <span class="about-service__title-icon_text">Запуск проекта: Анализ</span>
@@ -178,14 +170,14 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid about-service__spacing px-lg-5" data-aos="fade-up">
+      <div class="container-fluid block-spacing px-lg-5" data-aos="fade-up">
         <div class="about-service__block-bg">
           <div class="about-service__block-bg_text">
             <p>Во время исследования онлайн-сектора юридических услуг мы выявили два конкурентных портрета:</p>
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing">
+      <div class="container block-spacing">
         <div class="row">
           <div class="col-xl-5 mb-5 mb-lg-5" data-aos="fade-up">
             <h2 class="main-title mb-4">Юридические компании</h2>
@@ -199,11 +191,11 @@
         </div>
       </div>
       <div class="container-fluid about-service__office-img" data-aos="fade-up"> </div>
-      <div class="container about-service__spacing about-service__line-height pb-5" data-aos="fade-up">
+      <div class="container block-spacing about-service__line-height pb-5" data-aos="fade-up">
         <p class="mb-5">Проводя тестирование контента на фокус-группе, мы получили общее впечатление по существующему контенту: компании стараются выразить экспертность и принадлежность к государственным структурам, а их образы перегруженные и сложные. Контент отдален от потребителя, словно компании не пытаются помочь, а наоборот порицают его за беспечное отношение к своим правам и обязанностям. </p>
         <p class="color-red font-bold">В разработке концепции мы учли эти факторы и отстроились от остальных компаний в сторону понятного, дружелюбного образа.</p>
       </div>
-      <div class="container-fluid about-service__spacing px-lg-5 mt-5" data-aos="fade-up">
+      <div class="container-fluid block-spacing px-lg-5 mt-5" data-aos="fade-up">
         <div class="about-service__block-bg">
           <div class="about-service__block-bg_img">
             <img src="img/gallery/icons-section/blue-1.svg" alt="Изображения">
@@ -213,7 +205,7 @@
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing about-service__line-height">
+      <div class="container block-spacing about-service__line-height">
         <div class="row">
           <div class="col-xl-12">
             <div data-aos="fade-up">
@@ -231,7 +223,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid about-service__spacing about-service__opportunities px-0 bg-blue">
+      <div class="container-fluid block-spacing about-service__opportunities px-0 bg-blue">
         <div class="container">
           <div class="row">
             <div class="col-xl-9 mb-5" data-aos="fade-up">
@@ -258,12 +250,12 @@
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing">
+      <div class="container block-spacing">
         <p class="about-service__parallax_text">Сегодня в России 20 кодексов, каждый из которых регулярно обновляется. Законы ждут граждан на каждом углу, парковке, станции метро и автобусной остановке. Эта мысль побудила нас создать яркую креативную концепцию.</p>
         <h2 class="about-service__parallax_title">Город Юристов - юридические услуги для всех и на каждом шагу</h2>
       </div>
       <div class="container-fluid about-service__parallax px-0" data-aos="fade-up"> </div>
-      <div class="container about-service__spacing about-service__ecosystem">
+      <div class="container block-spacing about-service__ecosystem">
         <h2 class="h2" data-aos="fade-up">реализация: Экосистема</h2>
         <div class="row">
           <div class="col-lg-6 col-md-12 mt-lg-5 mt-4" data-aos="fade-up">
@@ -296,7 +288,7 @@
           </div>
         </div>
       </div>
-      <div class="container about-service__spacing about-service__content">
+      <div class="container block-spacing about-service__content">
         <h2 class="h2 mb-lg-5 mb-4" data-aos="fade-up">КОНТЕНТ</h2>
         <div class="row">
           <div class="col-lg-11" data-aos="fade-up">
@@ -398,7 +390,7 @@
         </div>
       </div>
       <!-- Numbers Section -->
-      <div class="container about-service__spacing numbers-section">
+      <div class="container block-spacing numbers-section">
         <h2 class="h2 mb-5" data-aos="fade-up">Результат работы</h2>
         <div class="row mt-lg-5">
           <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4" data-aos="fade-up">
@@ -439,48 +431,48 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid about-service__spacing other-cases mt-5 px-0 bg-grey">
-        <div class="container">
-          <h2 class="other-cases__title" data-aos="fade-up">Другие кейсы</h2>
-          <!-- Swiper -->
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide" data-aos="fade-up">
-                <a href="#" class="other-cases__card">
-                  <div class="other-cases__card_img">
-                    <img src="img/slider/others-1.jpg" alt="Изображения">
-                  </div>
-                  <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
-                  <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </a>
-              </div>
-              <div class="swiper-slide" data-aos="fade-up">
-                <a href="#" class="other-cases__card">
-                  <div class="other-cases__card_img">
-                    <img src="img/slider/others-2.jpg" alt="Изображения">
-                  </div>
-                  <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
-                  <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </a>
-              </div>
-              <div class="swiper-slide" data-aos="fade-up">
-                <a href="#" class="other-cases__card">
-                  <div class="other-cases__card_img">
-                    <img src="img/slider/others-3.jpg" alt="Изображения">
-                  </div>
-                  <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
-                  <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </a>
-              </div>
-              <div class="swiper-slide" data-aos="fade-up">
-                <a href="#" class="other-cases__card">
-                  <div class="other-cases__card_img">
-                    <img src="img/slider/others-1.jpg" alt="Изображения">
-                  </div>
-                  <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
-                  <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
-                </a>
-              </div>
+    </section>
+    <section class="container-fluid block-spacing other-cases px-0 bg-grey">
+      <div class="container">
+        <h2 class="other-cases__title" data-aos="fade-up">Другие кейсы</h2>
+        <!-- Swiper -->
+        <div class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide" data-aos="fade-up">
+              <a href="#" class="other-cases__card">
+                <div class="other-cases__card_img">
+                  <img src="img/slider/others-1.jpg" alt="Изображения">
+                </div>
+                <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
+                <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
+              </a>
+            </div>
+            <div class="swiper-slide" data-aos="fade-up">
+              <a href="#" class="other-cases__card">
+                <div class="other-cases__card_img">
+                  <img src="img/slider/others-2.jpg" alt="Изображения">
+                </div>
+                <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
+                <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
+              </a>
+            </div>
+            <div class="swiper-slide" data-aos="fade-up">
+              <a href="#" class="other-cases__card">
+                <div class="other-cases__card_img">
+                  <img src="img/slider/others-3.jpg" alt="Изображения">
+                </div>
+                <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
+                <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
+              </a>
+            </div>
+            <div class="swiper-slide" data-aos="fade-up">
+              <a href="#" class="other-cases__card">
+                <div class="other-cases__card_img">
+                  <img src="img/slider/others-1.jpg" alt="Изображения">
+                </div>
+                <h3 class="other-cases__card_title">Пивоваренный завод “Хадыженское”</h3>
+                <p class="other-cases__card_content">Какой-то текст про кейс, но более мелким шрифтом</p>
+              </a>
             </div>
           </div>
         </div>
