--- a/architecture.html
+++ b/architecture.html
@@ -144,6 +144,13 @@
             </div>
           </div>
         </div>
+        <!-- Add Arrows -->
+        <div class="architecture__slider_arrow" data-aos="fade-up">
+          <div class="architecture__slider_arrow_block">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </div>
       </div>
       <div class="container-fluid px-0 architecture__about_dark-blue pb-0">
         <div class="container">
@@ -191,10 +198,12 @@
               <img src="img/images/archtecture/gallery/6.jpg" alt="Изображения">
             </div>
           </div>
-          <!-- Add Arrows -->
-          <div class="architecture__slider_arrow">
-            <div class="swiper-button-next"></div>
+        </div>
+        <!-- Add Arrows -->
+        <div class="architecture__slider_arrow" data-aos="fade-up">
+          <div class="architecture__slider_arrow_block">
             <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
         </div>
       </div>
